<resources>
    <string name="app_name">Wevigation</string>
    <string name="mapbox_access_token">pk.eyJ1IjoieXMtanVuIiwiYSI6ImNsMXVxbzljbTJ1b2Yzam9iNW5ia2RhMW0ifQ.K3ULkXbRgbZKmEoLsYJgEQ</string>
    <string name="googlemaps">고속도로 위험도</string>
    <string name="mapboxmap">실시간 경로 안내</string>

    <string name="nav_header_title">블랙아이스 위험도 안내앱</string>
    <string name="nav_header_subtitle">2022 캡스톤 디자인 2</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="maker">만든이</string>
    <string name="info">앱 설명</string>
    <string name="exit">앱 종료</string>
    <string name="sure">정말 앱을 종료하실건가요?</string>
    <string name="yes">네</string>
    <string name="no">아니요</string>
    <string name="confirm">확인</string>
    <string name="developer_info">개발자 정보</string>
    <string name="yuseung">창원대학교 20163080 전유승</string>
    <string name="hangsup">창원대학교 20163050 민항섭</string>
    <string name="blackice">블랙아이스란?</string>
    <string name="blackice_info_1">블랙아이스는 아스팔트 위 결빙 현상을 의미합니다. 이는 운전자가 쉽게 인지할 수 없어 대형사고로 이어질 수 있습니다. 또한, 주로 고속도로에서 높은 속도로 주행하는 차량에게는 특히 치명적이며 2차 사고로 이어지는 확률도 매우 높습니다.</string>
    <string name="blackice_info_2">블랙아이스를 정확하게 예측하는 것은 매우 어려운 일입니다. 하지만 블랙아이스가 발생하는 여러 요인 중 가장 큰 요인은 어는 비로 알려져있습니다.</string>
    <string name="blackice_info_3">따라서 저희는 기상청 공공데이터와 ECMWF 기상데이터를 활용하여 어는 비가 발생하는 조건을 계산하여 도로의 결빙 위험도를 제공해드립니다.</string>
    <string name="blackice_info_4">기상청에 따르면 어는 비가 발생하기 위해서는 \'상층 고도의 기온 분포\' 그리고 \'층후의 두께\' 두 조건이 일치하여야 발생한다고 알려져 있습니다.</string>
    <string name="blackice_info_5">1000hPa에서는 영하의 기온을, 850hPa 부터 700hPa 사이는 영상의 기온을 가지게 되면 어는 비가 발생한다고 알려져 있습니다.</string>
    <string name="blackice_info_6">1000hPa 부터 850hPa 사이는 1290gpm 에서 1310gpm 사이의 값을 가지며, 850hPa 부터 700hPa 사이는 1540gpm 보다 크면 어는 비가 발생한다고 알려져 있습니다.</string>
    <string name="blackice_info_7">즉, 쉽게 설명하자면 내리던 눈이 적합한 두께의 영상의 기온층을 만나 녹게 되고 다시 지상으로 내려오면서 영하의 기온층에서 과냉각 상태가 되어 지면에 도달하는 순간 비 처럼 보였지만 노면에서는 얼어버리는 현상을 의미하며 이것이 어는 비입니다.</string>
    <string name="title_1">블랙아이스란?</string>
    <string name="title_2">블랙아이스를 예측할 수 없나요?</string>
    <string name="title_3">어는 비가 발생하는 조건은?</string>
    <string name="title_4">정리하자면...</string>
    <string name="blackice_image_1">-상층 고도에서의 기온 분포에 따른 기상-</string>
    <string name="blackice_image_2">-상층 고도에서의 충후-</string>
</resources>